cmake_minimum_required(VERSION 3.22)
project(mddctl)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDART 20)
set(CMAKE_CXX_STANDART_REQUIRED True)
add_executable(mddctl main.cpp)
find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBUSB REQUIRED libusb-1.0)
include_directories(${LIBUSB_INCLUDE_DIRS})
target_link_libraries(mddctl ${LIBUSB_LIBRARIES})
